# catfish-LP

./: .gitignore  README.md  configure.ac
lib/graph/: directed_graph.cc  draw.cc  vertex_base.h
scripts/: sol_from_catfish_to_optimized_ILP_readable.sh
src/: Makefile.am  catfish.cc  catfish.h  config.cc  config.h  equation.cc  equation.h  gtf.cc  main.cc  splice_graph.cc  splice_graph.h  truth_path.cc  truth_path.h
